# Qt6_Moroccan_CardGame

./: README.md
Source Code/cardGame/: CMakeLists.txt  Deck.h  Main.qml  card.cpp  card.h  controller.cpp  controller.h  deck.cpp  main.cpp  player.cpp  player.h  table.cpp  table.h
